...
  ('Toplu Taşıma', 'expense', 'main'),
  ('Taksi', 'expense', 'extra'),
  ('Araç Bakım', 'expense', 'extra'),
  ('MTV', 'expense', 'extra'),
  ('Sigorta/Kasko', 'expense', 'extra'),
  ('Otopark/Köprü', 'expense', 'extra'),
  ('Süpermarket', 'expense', 'main'),
  ('Pazaryeri', 'expense', 'main'),
  ('Dışarıda Yemek', 'expense', 'extra'),
  ('Paket Servis', 'expense', 'extra'),
  ('Su Siparişi', 'expense', 'main'),
  ('Hastane', 'expense', 'main'),
  ('İlaç/Eczane', 'expense', 'main'),
...
